[tool.poetry]
name = "gate"
version = "0.1.0"
description = "Data validation tool for machine learning pipelines."
authors = ["Shreya Shankar <shreyashankar@berkeley.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gate"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
duckdb = "^0.7.1"
sentence-transformers = "^2.2.2"
polars = "^0.17.5"
pyarrow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.261"
pre-commit = "^3.2.2"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
max-line-length = 88
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
